# python-flask/swagger_server/models/temperature.py
@@ -1,0 +1,118 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Temperature(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, name: str=None, display_name: str=None, email: str=None):  # noqa: E501
+        """Temperature - a model defined in Swagger
+
+        :param name: The name of this Temperature.  # noqa: E501
+        :type name: str
+        :param display_name: The display_name of this Temperature.  # noqa: E501
+        :type display_name: str
+        :param email: The email of this Temperature.  # noqa: E501
+        :type email: str
+        """
+        self.swagger_types = {
+            'name': str,
+            'display_name': str,
+            'email': str
+        }
+
+        self.attribute_map = {
+            'name': 'name',
+            'display_name': 'display_name',
+            'email': 'email'
+        }
+        self._name = name
+        self._display_name = display_name
+        self._email = email
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Temperature':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Temperature of this Temperature.  # noqa: E501
+        :rtype: Temperature
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this Temperature.
+
+
+        :return: The name of this Temperature.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this Temperature.
+
+
+        :param name: The name of this Temperature.
+        :type name: str
+        """
+
+        self._name = name
+
+    @property
+    def display_name(self) -> str:
+        """Gets the display_name of this Temperature.
+
+
+        :return: The display_name of this Temperature.
+        :rtype: str
+        """
+        return self._display_name
+
+    @display_name.setter
+    def display_name(self, display_name: str):
+        """Sets the display_name of this Temperature.
+
+
+        :param display_name: The display_name of this Temperature.
+        :type display_name: str
+        """
+        if display_name is None:
+            raise ValueError("Invalid value for `display_name`, must not be `None`")  # noqa: E501
+
+        self._display_name = display_name
+
+    @property
+    def email(self) -> str:
+        """Gets the email of this Temperature.
+
+
+        :return: The email of this Temperature.
+        :rtype: str
+        """
+        return self._email
+
+    @email.setter
+    def email(self, email: str):
+        """Sets the email of this Temperature.
+
+
+        :param email: The email of this Temperature.
+        :type email: str
+        """
+        if email is None:
+            raise ValueError("Invalid value for `email`, must not be `None`")  # noqa: E501
+
+        self._email = email
