# python-flask/swagger_server/swagger/swagger.yaml
@@ -1,60 +1,116 @@
-openapi: 3.0.0
+openapi: 3.0.1
 info:
-  title: example API
+  title: Sample OpenAPI Specification
+  description: An OpenAPI specification example
+  license:
+    name: Apache 2.0
+    url: https://www.apache.org/licenses/LICENSE-2.0.html
   version: 0.0.1
 servers:
-- url: /my-service/1.0.0
+- url: http://localhost:8080/
+  description: Example API Service
 paths:
-  /temperature:
+  /Temperatures:
     get:
-      operationId: get_temperatures
+      description: Gets a Temperature
+      operationId: get_temperature
       responses:
         "200":
-          description: ok
+          description: Temperature found
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Temperatue'
-                x-content-type: application/json
+                $ref: '#/components/schemas/Temperature'
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
       x-openapi-router-controller: swagger_server.controllers.default_controller
-    put:
-      operationId: set_temperature
+    post:
+      description: Creates a new Temperature
+      operationId: create_temperature
       requestBody:
+        description: The Temperature to create
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Temperatue'
+              $ref: '#/components/schemas/Temperature'
       responses:
-        "201":
-          description: created
+        "200":
+          description: Temperature added
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Temperature'
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorMessage'
       x-openapi-router-controller: swagger_server.controllers.default_controller
 components:
   schemas:
-    Temperatue:
+    Temperature:
       required:
-      - timestamp
-      - value
+      - display_name
+      - email
       type: object
       properties:
-        value:
-          type: number
-          description: the temperature
-          format: double
-        units:
+        name:
           type: string
-          description: the temperature units
-          default: celsius
-          enum:
-          - celsius
-          - fahrenheit
-        timestamp:
+          readOnly: true
+        display_name:
+          maxLength: 20
+          minLength: 1
           type: string
-          description: the timestamp when the temperature was measured
-          format: date-time
+        email:
+          type: string
+          format: email
       example:
-        units: celsius
-        value: 0.80082819046101150206595775671303272247314453125
-        timestamp: 2000-01-23T04:56:07.000+00:00
+        name: name
+        display_name: display_name
+        email: ""
+    ErrorMessage:
+      required:
+      - error_code
+      - error_message
+      type: object
+      properties:
+        error_code:
+          type: string
+        error_message:
+          type: string
+  parameters:
+    Temperature_id:
+      name: Temperature_id
+      in: path
+      description: ID of Temperature
+      required: true
+      style: simple
+      explode: false
+      schema:
+        type: string
+    photo_id:
+      name: photo_id
+      in: path
+      description: ID of photo
+      required: true
+      style: simple
+      explode: false
+      schema:
+        type: string
+    photo_ids:
+      name: photo_ids
+      in: query
+      description: a collection of photo IDs
+      required: true
+      style: form
+      explode: true
+      schema:
+        type: array
+        items:
+          type: string
 
